# LeviLauncher-FirstPersonModel

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_STRUCTURE.md  README.md  build.sh  manifest.json
.github/workflows/: build.yml
hook/: ARMPatch.h  HookManager.h  KittyScanner.h  KittyUtils.h
include/: CameraAPI.h  FirstPersonModel.h  Logger.h
src/: CameraHooks.cpp  FirstPersonModel.cpp  ModMain.cpp  Offsets.cpp  PlayerRenderer.cpp  main.cpp
src/features/: Features.cpp  Features.hpp
src/hook/: ARMPatch.cpp  HookManager.cpp  KittyArm64.cpp  KittyArm64.h  KittyMemory.cpp  KittyMemory.h  KittyScanner.cpp  KittyUtils.cpp
src/include/: Offsets.h  Signatures.h
src/util/: BoolOption.h  FloatOption.h  Hooks.cpp  Hooks.hpp  IOptions.h  IOptions.hpp  IntOption.h  Logger.h  OptionID.h  StringOption.h
